# bizarre-engine

./: .clang-format  .gitignore  CMakeLists.txt  ClangOverrides.cmake  README.md  build.linux.sh  run.linux.sh
Engine/: CMakeLists.txt
Engine/include/: BizarreEngine.h
Engine/src/: lib.cpp
Engine/src/containers/: BeString.cpp  BeString.h  DynamicArray.h  StringView.cpp  StringView.h  Tuple.h  be_string.cpp  be_string.h
Engine/src/core/: BeAssert.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  Window.cpp  Window.h  be_asserts.h  defines.h  log.cpp  window.cpp  window.h
Engine/src/math/: Limits.h  Math.cpp  Math.h  Vector.h
Engine/src/platform/: Platform.h  platform.h
Engine/src/platform/linux/: PlatformLinux.cpp  X11Utils.cpp  X11Utils.h  X11Window.cpp  X11Window.h  X11_window.cpp  X11_window.h  platform_linux.cpp  x11_utils.cpp  x11_utils.h
Engine/src/utils/: FormattingUtils.h  InputUitls.cpp  InputUtils.h  StringFormat.h  StringUtils.cpp  StringUtils.h  TypeUtils.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
